# api_python_v2.2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: celery.py  database.py  main.py  models.py
app/agents/: llm_agent.py
app/routers/: generation.py
app/schemas/: schemas.py
app/utils/: logger.py  parsers.py  parsers_reprocessing.py  rabbitmq.py
app/workers/: consumer.py
app/workers/processors/: base.py  creation.py  reprocessing.py
tests/test_generation/: conftest.py  test_endpoints.py
